Creating html markup for testimonial section of clients page

--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <!-- Container -->
-   <div class="container" style="height: 150vh;">
+   <div class="container">
     <!-- Navigation -->
      <nav class="navbar multi-page-nav">
       <!-- Logo -->
@@ -294,6 +294,291 @@
           <li class="nav-item"><a href="pricing.html" class="nav-btn">Pricing</a></li>
         </ul>
      </nav>
+
+     <!-- Testimonials -->
+     <section class="testimonials">
+      <div class="testimonials-header">
+        <h1>What Customers Are Saying About Us On</h1>
+        <div class="stars">
+          <span class="material-symbols-rounded"> hotel_class </span>
+          <div class="trustpilot">
+            <span>Trustpilot</span>
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="testimonials-wrapper">
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client1.jpg" />
+            <span>John Smith</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta cumque quod nihil
+              laudantium molestias ut itaque mollitia inventore assumenda, exercitationem ratione
+              accusamus. Voluptatibus vero sapiente magnam dolore ipsa in temporibus.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client2.jpg" />
+            <span>Jack Brown</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nesciunt rerum,
+              labore ea dolor voluptas consequatur accusamus nemo eius maiores repellat architecto
+              facere incidunt quidem corporis aspernatur est porro veniam atque facilis.
+              Consequuntur excepturi inventore debitis culpa odit. Dicta, sint.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client3.jpg" />
+            <span>Ann Smith</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis sit cumque
+              voluptatibus asperiores eius ut dolorem aliquid odit ex, obcaecati, voluptatem illo
+              ad cum iste nostrum, quaerat voluptatum ratione quisquam qui in nisi laboriosam
+              nihil nam. Animi soluta similique obcaecati saepe, totam in quia eos ullam ab ut
+              error dolore?
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client4.jpg" />
+            <span>Nick Peters</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus sequi quas nam
+              quod tempora neque ratione. In inventore temporibus deserunt ea omnis. Itaque, eius
+              perspiciatis iste blanditiis recusandae quis ea!
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client5.jpg" />
+            <span>Phillip Doe</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis corrupti vel
+              totam sequi, dolorum nam tempora odio accusantium ipsa excepturi natus quos error
+              hic impedit iste dolorem inventore. Laborum, ullam!
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client6.jpg" />
+            <span>Jane Smith</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestiae non
+              vitae adipisci dignissimos laboriosam ipsa, porro modi eius quisquam tenetur
+              possimus provident, sint doloremque quae! Iusto eligendi laudantium quam corrupti
+              molestias sapiente vel culpa ratione labore distinctio, voluptatem ducimus.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client7.jpg" />
+            <span>Jessica Mendez</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus eaque laudantium
+              quos eligendi natus cum sed perferendis alias ab esse molestias assumenda sapiente
+              fugiat, at magni, quisquam laboriosam similique tenetur obcaecati consequatur
+              commodi qui explicabo? Perferendis amet officiis dolores eos.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client8.jpg" />
+            <span>Steve Thompson</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nam, officia
+              tempora at aliquid hic. Laudantium voluptate, inventore fugit doloribus, ea
+              architecto quam iure fuga est veniam sapiente minus non consectetur quo enim.
+              Dignissimos inventore tempore commodi deserunt odit error fugiat animi nisi, ex
+              aliquid natus? Labore exercitationem ipsum iusto.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client9.jpg" />
+            <span>Maria Greene</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt, quidem. Delectus
+              est molestiae enim neque. Enim maxime itaque, doloribus aspernatur ipsa repellat.
+              Cupiditate perferendis id, alias expedita, vitae quos iste dolorum ad nemo nam
+              exercitationem veritatis minus deleniti molestias quia facere unde excepturi ipsa
+              reiciendis illo aliquam consectetur. Earum officia quisquam ratione, quibusdam unde
+              odit numquam non error aut totam.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client10.jpg" />
+            <span>Alexis Smith</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum necessitatibus
+              possimus recusandae rerum, numquam pariatur atque labore suscipit cumque autem error
+              accusamus repellat minima minus vitae! Eligendi, unde quam? Quisquam suscipit ullam
+              vel inventore quaerat quos rerum repellat? Sint, voluptates!
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client11.jpg" />
+            <span>Bob Brown</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab, expedita! Non ea ut
+              voluptatum voluptate molestias iste ad. Quisquam, vero.
+            </p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial-top">
+            <img src="../images/client12.jpg" />
+            <span>Rose Henson</span>
+          </div>
+          <div class="testimonial-body">
+            <div>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+              <span class="material-symbols-rounded"> star </span>
+            </div>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis quo quaerat dolorem
+              numquam ducimus explicabo, eum eveniet qui veritatis cupiditate! Reprehenderit sint
+              corporis dolorem molestiae magnam! A accusantium reiciendis quasi iste laudantium
+              eius expedita nulla aliquam, neque, voluptas necessitatibus corrupti!
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     </div>
     <script src="../JS/script.js"></script>
