styling products content section

--- a/HTML/clients.html
+++ b/HTML/clients.html
@@ -317,7 +317,7 @@
       <div class="testimonials-wrapper">
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client1.jpg" />
+            <img src="../images/client1.jpg" alt="client 1"/>
             <span>John Smith</span>
           </div>
           <div class="testimonial-body">
@@ -338,7 +338,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client2.jpg" />
+            <img src="../images/client2.jpg" alt="client 2"/>
             <span>Jack Brown</span>
           </div>
           <div class="testimonial-body">
@@ -360,7 +360,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client3.jpg" />
+            <img src="../images/client3.jpg" alt="client 3"/>
             <span>Ann Smith</span>
           </div>
           <div class="testimonial-body">
@@ -383,7 +383,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client4.jpg" />
+            <img src="../images/client4.jpg" alt="client 4"/>
             <span>Nick Peters</span>
           </div>
           <div class="testimonial-body">
@@ -404,7 +404,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client5.jpg" />
+            <img src="../images/client5.jpg" alt="client 5"/>
             <span>Phillip Doe</span>
           </div>
           <div class="testimonial-body">
@@ -425,7 +425,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client6.jpg" />
+            <img src="../images/client6.jpg" alt="client 6"/>
             <span>Jane Smith</span>
           </div>
           <div class="testimonial-body">
@@ -447,7 +447,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client7.jpg" />
+            <img src="../images/client7.jpg" alt="client 7"/>
             <span>Jessica Mendez</span>
           </div>
           <div class="testimonial-body">
@@ -469,7 +469,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client8.jpg" />
+            <img src="../images/client8.jpg" alt="client 8"/>
             <span>Steve Thompson</span>
           </div>
           <div class="testimonial-body">
@@ -492,7 +492,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client9.jpg" />
+            <img src="../images/client9.jpg" alt="client 9"/>
             <span>Maria Greene</span>
           </div>
           <div class="testimonial-body">
@@ -516,7 +516,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client10.jpg" />
+            <img src="../images/client10.jpg" alt="client 10"/>
             <span>Alexis Smith</span>
           </div>
           <div class="testimonial-body">
@@ -538,7 +538,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client11.jpg" />
+            <img src="../images/client11.jpg" alt="client 11"/>
             <span>Bob Brown</span>
           </div>
           <div class="testimonial-body">
@@ -558,7 +558,7 @@
         </div>
         <div class="testimonial">
           <div class="testimonial-top">
-            <img src="../images/client12.jpg" />
+            <img src="../images/client12.jpg" alt="client 12"/>
             <span>Rose Henson</span>
           </div>
           <div class="testimonial-body">
