--- a/HTML/products.html
+++ b/HTML/products.html
@@ -296,41 +296,47 @@
         </ul>
      </nav>
 
-     <!-- Proudcts -->
-    <section class="proudcts">
-      <div class="products-wrapper">
-        <h1>Themes & Plugins</h1>
-        <h3>Build The Most Popopular Themes and Plugins in the World</h3>
-      </div>
-      <div class="products-content">
-        <div class="products-content-left">
-          <h1>Build</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, porro praesentium. Quisquam, tenetur nostrum at eos aliquid deserunt nesciunt earum suscipit excepturi esse ex, facere quam similique enim tempora quis.</p>
-          <button type="button" class="products-btn">Learn About Us</button>
-        </div>
-        <div class="products-content-right">
-          <img src="../images/web2-img1.png" alt="">
-          <img src="../images/web2-img2.png" alt="">
-          <img src="../images/web2-img3.png" alt="">
-          <img src="../images/web5-img1.png" alt="">
-          <img src="../images/web5-img2.png" alt="">
-        </div>
-        <div class="products-promo">
-          <div class="products-promo-shapes">
-            <div class="products-promo-rectangle"></div>
-            <div class="small-circle"></div>
-            <div class="large-circle"></div>
+      <!-- Products -->
+      <section class="products">
+        <div class="products-wrapper">
+          <div class="products-header">
+            <h1>Themes & Plugins</h1>
+            <h3>Build The Most Popular Themes and Plugins in the World</h3>
           </div>
-          <div class="promo-content">
-            <h1>100,000+ Clients are already buidling awsome and modern websites with Code And Create. Join the most empowered community</h1>
-            <button type="button">Sign Up Today</button>
-            <p>We offer a 30 day money back guarantee, so join us!</p>
-            <div class="promo-shadow"></div>
+          <div class="products-content">
+            <div class="products-content-left">
+              <h1>Build</h1>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi, culpa reiciendis
+                eum ipsum odio quia. Sapiente harum molestias dolor eveniet cupiditate, id maiores
+                consectetur officiis, deserunt ipsum quia natus nulla.
+              </p>
+              <button type="button" class="products-btn">Learn About Us</button>
+            </div>
+            <div class="products-content-right">
+              <img src="../images/web2-img1.png" />
+              <img src="../images/web2-img2.png" />
+              <img src="../images/web2-img3.png" />
+            </div>
+          </div>
+          <div class="products-promo">
+            <div class="products-promo-shapes">
+              <div class="promo-rectangle"></div>
+              <div class="small-circle"></div>
+              <div class="large-circle"></div>
+            </div>
+            <div class="promo-content">
+              <h1>
+                100,000+ Clients are already building awesome and modern websites with Code And
+                Create. Join the most empowered community
+              </h1>
+              <button type="button">Sign Up Today</button>
+              <p>We offer a 30 day money back guarantee, so join us!</p>
+              <div class="promo-shadow"></div>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-
+      </section>
 
     <!-- Footer -->
     <footer hidden>
