--- a/HTML/account.html
+++ b/HTML/account.html
@@ -304,9 +304,9 @@
           <h1>Members Space</h1>
           <h3>Manage your account, download products and chat us 24/7</h3>
         </div>
-        <div class="acount-form-wrapper">
+        <div class="account-form-wrapper">
           <span class="material-symbols-rounded">
-            peson_check
+            person_check
           </span>
           <form>
             <div class="account-inputs">
@@ -326,7 +326,7 @@
     </section>
 
     <!-- Footer -->
-    <footer hidden>
+    <footer>
       <div class="footer-content">
         <div class="footer-top">
           <div class="footer-social-media footer-item">
